--- a/react-movie/src/components/Movie/Movie.scss
+++ b/react-movie/src/components/Movie/Movie.scss
@@ -4,31 +4,55 @@
     background:rgb(177, 177, 177);
     box-shadow: rgba(0, 0, 0, 0.774) 10px 5px 5px ; 
     display: flex;
-    justify-content:center;
+    flex-direction: column;
+    align-items: center;
     width: 8vw;
-    height: 29vh;
+    height: auto;
     border-radius: 2%;
     border: 1px solid rgba(114, 114, 114, 0.63);
     cursor:pointer;
-        h4{
+        h2{
             background: rgb(235, 235, 235);
             width:7vw;
             height: 4.2vh;
             padding: 0.1em;
             font-size: 1em;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
-            overflow: hidden;
+       /*      overflow: hidden; */
             border-radius: 5px;
             text-align: center; 
         } 
         
         img{
-            margin-top: 10px;
+            margin-top: 1em;
             width: 7vw;
             height: 21vh;
             border-radius: 5px;
-            position: relative;
-            
+            position: relative;  
         }
+
+        .average {
+            /* align-items: center; */
+            background-color:rgb(71, 72, 73);
+            /* height: 3.3vh; */
+            width: 9vw;
+            border: 2px solid rgb(168, 168, 168);
+            border-radius: 50%;
+            display: flex;
+            justify-content:center;
+            margin:-2.7em 0.4em;
+            position: absolute; 
+            width: 2em;
+
+            p{
+                color: rgb(255, 253, 253);
+                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+                font-weight: bolder;
+                font-size: 0.8em; 
+                margin: 0.5em auto;
+            }
+          }
+
+        
     
 }
