--- a/react-movie/src/components/Header/Header.scss
+++ b/react-movie/src/components/Header/Header.scss
@@ -12,9 +12,13 @@
 
 header{
     background: #1f1f1f;
-    color:white;
+    
     display:flex;
     padding:0 0.8em;
+
+    span{
+        color:white;
+    }
     a{
         all:unset;   // para quitar los estilos que vienen por defecto
 
