--- a/react-movie/src/components/Movie/Movie.scss
+++ b/react-movie/src/components/Movie/Movie.scss
@@ -11,6 +11,8 @@
     border-radius: 2%;
     border: 1px solid rgba(114, 114, 114, 0.63);
     cursor:pointer;
+    position: relative;
+    overflow: hidden;
         h2{
             background: rgb(235, 235, 235);
             width:7vw;
@@ -50,7 +52,25 @@
                 margin: 0.5em auto;
             }
           }
-
-        
-    
 }
+
+.moreDetails{
+    position: absolute;
+    background-color: white;
+    bottom:0;
+    left:0;
+    right: 0;
+    padding: 1rem;
+    transform:translateY(100%);
+    transition: transform 1s ease-in-out; 
+    overflow: auto; 
+    max-height: 100%;  
+     h4{
+         margin-top: 1.5em;
+     }
+}
+
+.movie:hover .moreDetails{
+    transform: translateY(0%);  
+}
+
