--- a/react-movie/src/components/Header/Header.scss
+++ b/react-movie/src/components/Header/Header.scss
@@ -35,6 +35,21 @@ header{
         color:rgb(7, 7, 7);
         border-radius: 5px;
     }
+    input{
+        margin: 0.5em 0 0 6em;
+        align-items: center;
+        height: 3em;
+        width: 15em;
+        /* appearance: none; */
+        box-sizing: content-box;
+        font-size: 12px;
+        border: 1px solid #666;
+        border-radius: 5px;
+        background:  center no-repeat transparent;
+        padding: 0 6px;
+        color: #ddd;
+        outline: 0;
+    }
     
 }
 
