--- a/react-movie/src/components/Movie/Movie.scss
+++ b/react-movie/src/components/Movie/Movie.scss
@@ -20,7 +20,7 @@
             padding: 0.1em;
             font-size: 1em;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
-       /*      overflow: hidden; */
+            overflow: hidden;
             border-radius: 5px;
             text-align: center; 
         } 
@@ -60,13 +60,14 @@
     bottom:0;
     left:0;
     right: 0;
-    padding: 1rem;
+    padding: 0.5rem;
     transform:translateY(100%);
     transition: transform 1s ease-in-out; 
     overflow: auto; 
     max-height: 100%;  
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
      h4{
-         margin-top: 1.5em;
+         margin-top: 1em;
      }
 }
 
