--- a/react-movie/src/components/Movie/Movie.scss
+++ b/react-movie/src/components/Movie/Movie.scss
@@ -64,11 +64,16 @@
     transform:translateY(100%);
     transition: transform 1s ease-in-out; 
     overflow: auto; 
-    max-height: 100%;  
+    max-height: 100%;
+    font-size: 10px;  
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
      h4{
          margin-top: 1em;
      }
+}
+
+.movie:hover{
+    transform: scale(1.25);
 }
 
 .movie:hover .moreDetails{
