--- a/react-movie/src/components/Movie/Movie.scss
+++ b/react-movie/src/components/Movie/Movie.scss
@@ -13,6 +13,17 @@
     cursor:pointer;
     position: relative;
     overflow: hidden;
+    ::-webkit-scrollbar {
+        width: 6px;     /* Tamaño del scroll en vertical */
+        height: 4px;    /* Tamaño del scroll en horizontal */
+        /* display: none; */  /* Ocultar scroll */
+        background: rgb(226, 226, 226);
+        border-radius: 4px;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+        background: #b3b3b3;
+    }
         h2{
             background: rgb(235, 235, 235);
             width:7vw;
@@ -65,10 +76,12 @@
     transition: transform 1s ease-in-out; 
     overflow: auto; 
     max-height: 100%;
-    font-size: 10px;  
+    font-size: 11px;  
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+    
      h4{
          margin-top: 1em;
+         
      }
 }
 
