--- a/react-movie/src/components/Header/Header.scss
+++ b/react-movie/src/components/Header/Header.scss
@@ -6,40 +6,47 @@
 }
 
  body{
-    background-color: rgb(21, 32, 78);
-    
+    background-color: rgb(21, 32, 78);  
 } 
 
 header{
     background: $darkest;
     display:flex;
+    flex-direction: row;
     padding:0 0.8em;
-
+    justify-content:space-between;
+    div{
+        display: flex;
+        
+        height: 3em;
+    
     span{
         color:$light;
+        align-items: center;
     }
     a{
         all:unset;   // para quitar los estilos que vienen por defecto
-
-        cursor:pointer;
-            padding:0.8em;
-            margin:0 0.9em;
-            background: #1f1f1f;
-            cursor: pointer;
-            transition:all 0.4s; /* para que el cambio sea suave*/
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        
+        padding:0.8em; 
+        margin:0 0.9em; 
+        background: #1f1f1f;
+        cursor: pointer;
+        transition:all 0.4s; /* para que el cambio sea suave*/
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
     }
     a:hover{
         background:rgba(228, 228, 228, 0.493) ;
         color:rgb(7, 7, 7);
         border-radius: 5px;
+       
     }
+}
     input{
-        margin: 0.5em 0 0 6em;
-        align-items: center;
-        height: 3em;
-        width: 15em;
+        align-self: center;
+        height: 2.2em;
+        width: 25em;
+        margin-right: 2em;
         /* appearance: none; */
         box-sizing: content-box;
         font-size: 12px;
@@ -49,6 +56,7 @@ header{
         padding: 0 6px;
         color: #ddd;
         outline: 0;
+        
     }
     
 }
