--- a/react-movie/src/components/Header/Header.scss
+++ b/react-movie/src/components/Header/Header.scss
@@ -5,9 +5,9 @@
     box-sizing: border-box
 }
 
- body{
+/*  body{
     background-color: rgb(28, 50, 90);  
-} 
+}  */
 
 header{
     background: $darkest;
