--- a/react-movie/src/components/Search/search.scss
+++ b/react-movie/src/components/Search/search.scss
@@ -36,17 +36,15 @@
 }
 
 
-.result{
-    
-   /*  background: rgb(0, 130, 65);  */
+.result{ 
     display: grid;
-    grid-template-columns: repeat(10,1fr);
-    grid-gap: 1rem;
-    grid-row-gap: 100px;
+    grid-template-columns: repeat(5,1fr);
+    grid-gap: 10px;
+    grid-row-gap: 10px;
     /* padding: 1em; */
-    width: 95%;
+    width: 85%;
     height: 90%;
     transition:all 2s;
-    margin: 1.5rem auto;       
+    margin: 0 auto;       
     
 }
