--- a/react-movie/src/App.css
+++ b/react-movie/src/App.css
@@ -2,3 +2,10 @@
     margin: 0;
     box-sizing: border-box
 }
+
+body{
+    background-image: url('./img/multiAmarillo.jpg');
+    background-size: cover;
+    overflow: hidden;
+    z-index: -3;
+}
