--- a/react-movie/src/components/Header/Header.scss
+++ b/react-movie/src/components/Header/Header.scss
@@ -5,40 +5,33 @@
     box-sizing: border-box
 }
 
- body{
-    background-color: rgb(28, 50, 90);  
-} 
-
 header{
     background: $darkest;
     display:flex;
     flex-direction: row;
-    /* padding:0 0.8em; */
     justify-content:space-between;
     div{
         display: flex;
         height: 3em;
     }
     span{
-        color:$light;
         align-items: center;
     }
     a{
         all:unset;   // para quitar los estilos que vienen por defecto
-        
         padding:0.8em; 
         margin:0 1em; 
         background: #1f1f1f;
         cursor: pointer;
         transition:all 0.4s; /* para que el cambio sea suave*/
+        color:$light;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
     }
     a:hover{
-        background:rgba(228, 228, 228, 0.493) ;
-        color:rgb(7, 7, 7);
-        border-radius: 5px;
-       
+        color:$yellow;
+        transition: all 0.2s; 
+        box-shadow: rgba(0, 0, 0, 0.479) 0px 0px 5px 5px ;  
     }
 }
 
