--- a/react-movie/src/components/Movie/Movie.scss
+++ b/react-movie/src/components/Movie/Movie.scss
@@ -2,14 +2,14 @@
     /* margin: 10px; */ 
     /* padding: 8px; */
     background:rgb(85, 85, 85);
-    box-shadow: rgba(0, 0, 0, 0.774) 10px 5px 5px ; 
+    box-shadow: rgba(0, 0, 0, 0.774) 15px 10px 5px ; 
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 8.4vw;
+    width: 8.8vw;
     height: auto;
     border-radius: 2%;
-    border: 1px solid rgba(114, 114, 114, 0.63);
+    border: 1px solid rgba(61, 61, 61, 0.856);
     cursor:pointer;
     position: relative;
     overflow: hidden;
@@ -43,7 +43,7 @@
         
         img{
             margin-top: 0.2em;
-            width: 8.1vw;
+            width: 8.4vw;
             height: 26vh;
             border-radius: 5px;
             position: relative;  
@@ -102,17 +102,19 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
     
      h4{
-         margin-top: 1em;
-         
+         margin-top: 1em; 
      }
 }
 
 .movie:hover{
-    transform: scale(1.2);
+    transform: scale(1.4);
+    z-index: 1;
+    background:rgba(54, 54, 54, 0.685);
+    box-shadow: rgba(0, 0, 0, 0.774) 0px 0px 10px 7px ; 
 }
 
 .movie:hover .moreDetails{
-    transform: translateY(0%);  
+    transform: translateY(0%);   
 }
 
 
