--- a/react-movie/src/containers/Movies/Movies.scss
+++ b/react-movie/src/containers/Movies/Movies.scss
@@ -1,3 +1,14 @@
+h4{
+    background:rgba(5, 5, 5, 0.527) ;
+    padding: 0.6em 1.5em; 
+    text-align: left;
+    color:rgb(255, 254, 254);
+    justify-content: center;
+    font-size: 1.1em;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-shadow: rgba(0, 0, 0, 0.774) 0px 2px 10px 7px ;
+}
+
 .movies{
     /* background: rgb(0, 130, 65); */ 
     display: grid;
@@ -5,9 +16,8 @@
     grid-gap: 1rem;
     grid-row-gap: 100px;
     padding: 1em;
-    margin-top: 2rem;
     width: 95%;
     height: 90%;
     transition:all 2s;
-    margin: 5rem auto;  
+    margin: 4.5rem auto;  
 }
