--- a/react-movie/src/components/Search/search.scss
+++ b/react-movie/src/components/Search/search.scss
@@ -10,17 +10,18 @@
    
    
     .searchResults{
-        padding: 1em; 
+        padding: 0.6em 1.5em; 
         text-align: left;
         color:white;
         justify-content: center;
         font-size: 1.5em;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+        background:rgba(5, 5, 5, 0.527) ;
     }
 
 }
 .input{
-    margin:1em 2em;
+    margin:0.8em 2em;
     align-items: center;
     height: 2.2em;
     width: 25em;
