--- a/react-movie/src/components/TituloInicio/TituloInicio.scss
+++ b/react-movie/src/components/TituloInicio/TituloInicio.scss
@@ -9,9 +9,9 @@
   padding-top:25vh;
   height:100vh;
   overflow:hidden;
-  -webkit-backface-visibility: hidden;
+  /* -webkit-backface-visibility: hidden;
   -webkit-perspective: 1000;
-  -webkit-transform: translate3d(0,0,0);
+  -webkit-transform: translate3d(0,0,0); */
 }
 
 .word {
@@ -63,9 +63,4 @@
     100% {opacity:0;width:800px;}
 }
 
-/* 
-p {
-  font-size:12px;
-  color:#999;
-  margin-top:200px;
-} */
+ 
