--- a/react-movie/src/components/Movie/Movie.scss
+++ b/react-movie/src/components/Movie/Movie.scss
@@ -1,15 +1,16 @@
+@import'../../colors.scss';
+
 .movie{
     /* margin: 10px; */ 
     /* padding: 8px; */
-    background:rgb(85, 85, 85);
-    box-shadow: rgba(0, 0, 0, 0.774) 15px 10px 5px ; 
+    background:$darkest;
+    box-shadow: rgba(0, 0, 0, 0.561) 10px 5px 5px ; 
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 8.8vw;
     height: auto;
     border-radius: 2%;
-    border: 1px solid rgba(5, 5, 5, 0.65);
     cursor:pointer;
     position: relative;
     overflow: hidden;
