--- a/react-movie/src/components/TituloInicio/TituloInicio.scss
+++ b/react-movie/src/components/TituloInicio/TituloInicio.scss
@@ -1,22 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');;
 
 .contenedorTituloInicio {
+  padding: 0;
+  /* background-color: blue; */
+  z-index: 0;
+  position:relative;
+  height: auto;
+  width: 70%;
+  margin:4em 0 0 3em;
   text-align:center;
   font-family: 'Pacifico', cursive;
   font-weight:300;
-  font-size:6em;
+  font-size:5em;
   text-shadow:5px 5px 2px rgba(0, 0, 0, 0.246);
-  padding-top:25vh;
-  height:100vh;
   overflow:hidden;
-  /* -webkit-backface-visibility: hidden;
-  -webkit-perspective: 1000;
-  -webkit-transform: translate3d(0,0,0); */
+
 }
 
 .word {
-  /* background: yellowgreen; */
-  width: 15%;
+ /*  background: yellowgreen; */
+  z-index: 1;
+  width: 25%;
   display:inline-block;
   overflow:hidden;
   white-space:nowrap;
@@ -35,7 +39,7 @@
 }
 
 .word:last-of-type span {
-     /* background: red;  */
+   /*  background: red; */
     width:50%;
     animation: slidein 7s infinite;
 }
@@ -48,7 +52,7 @@
 }
 
 @keyframes slidein {
-    0% { margin-left:-2000px; }
+    0% { margin-left:-400px; }
     20% { margin-left:-850px; }
     35% { margin-left:80px; }
     100% { margin-left:0px; }
@@ -59,8 +63,8 @@
     20% {opacity:1;width:0px;}
     30% {width:1100px;}
     80% {opacity:1;}
-    90% {opacity:1;width:780px;}
-    100% {opacity:0;width:800px;}
+    90% {opacity:1;width:600px;}
+    100% {opacity:0;width:620px;}
 }
 
  
