--- a/react-movie/src/components/Movie/Movie.scss
+++ b/react-movie/src/components/Movie/Movie.scss
@@ -1,14 +1,19 @@
 @import'../../colors.scss';
 
+* {
+    margin: 0;
+    box-sizing: border-box;
+    width: 100%;
+}
+
 .movie{
-    /* margin: 10px; */ 
-    /* padding: 8px; */
+    padding: 3px;
     background:$darkest;
     box-shadow: rgba(0, 0, 0, 0.561) 10px 5px 5px ; 
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 8.8vw;
+    width: auto;
     height: auto;
     border-radius: 2%;
     cursor:pointer;
@@ -44,8 +49,7 @@
         
         img{
             margin-top: 0.2em;
-            width: 8.4vw;
-            height: 26vh;
+            height: 25vh;
             border-radius: 5px;
             position: relative;  
         }
@@ -54,8 +58,8 @@
             background-color:rgb(53, 53, 53);
             border: 2px solid rgb(168, 168, 168);
             border-radius: 50%;
-            display: flex;
-            justify-content:center;
+            /* display: flex; */
+            /* justify-content:center; */
             margin:-2.7em 0.4em;
             position: absolute; 
             width: 2em;
@@ -64,8 +68,10 @@
                 color: rgb(255, 253, 253);
                 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
                 font-weight: bolder;
-                font-size: 0.8em; 
-                margin: 0.5em auto;
+                font-size: 0.8em;
+                text-align: center; 
+                margin: 0.5em auto; 
+              
             }
 
             .green{
@@ -107,11 +113,13 @@
      }
 }
 
-.movie:hover{
-    transform: scale(1.4);
+.movie:hover {
+    transform: scale(1.5);
+    backface-visibility: hidden;
     z-index: 1;
     background:rgba(54, 54, 54, 0.685);
     box-shadow: rgba(0, 0, 0, 0.774) 0px 0px 10px 7px ; 
+
 }
 
 .movie:hover .moreDetails{
