--- a/react-movie/src/components/Header/Header.scss
+++ b/react-movie/src/components/Header/Header.scss
@@ -26,7 +26,7 @@ header{
         transition:all 0.4s; /* para que el cambio sea suave*/
         color:$light;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
+        font-size: 0.9em;
     }
     a:hover{
         color:$yellow;
