--- a/react-movie/src/components/TitleMoveType/TitleMovieType.scss
+++ b/react-movie/src/components/TitleMoveType/TitleMovieType.scss
@@ -5,14 +5,14 @@
 }
 
 .titleMovieType{
-   display: flex;
-   flex-direction: row;
-   background:rgba(5, 5, 5, 0.527) ;
+    display: flex;
+    flex-direction: row;
+    background:rgba(5, 5, 5, 0.527) ;
     padding: 0.6em 1.5em; 
-    /* text-align: left; */
     color:rgb(255, 254, 254);
     justify-content: flex-start; 
-    font-size: 1.1em;
+    font-weight:lighter ;
+    font-size: 0.8em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-shadow: rgba(0, 0, 0, 0.774) 0px 2px 10px 7px ;
 }
