--- a/react-movie/src/components/Footer/Footer.scss
+++ b/react-movie/src/components/Footer/Footer.scss
@@ -11,6 +11,7 @@ footer {
     align-items: flex-end;
     color:$light ;
      p{
+        text-align: end;
         margin-right: 2em;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
      }
