--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,7 +3,7 @@
 footer {
     background-color:$darkest ;
     padding: 0.6em;
-    width: 100vw;
+   /*  width: 100vw; */
     bottom: 0;
     position:fixed;
     display: flex;
