--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -33,6 +33,28 @@ header{
         transition: all 0.2s; 
         box-shadow: rgba(0, 0, 0, 0.479) 0px 0px 5px 5px ;  
     }
+
+
+
+    @media only screen and (max-width: 1023px) {
+        a{
+            font-size: 1em; 
+        }
+    }
+    @media only screen and (max-width: 768px) {
+        * {
+            margin: 0;
+            box-sizing: border-box;
+        }
+        a{
+            font-size: 0.8em; 
+        }
+    }
+    @media only screen and (max-width: 450px) {
+        a{
+            font-size: 0.7em; 
+        }
+    }    
 }
 
 
