--- a/src/containers/Movies/Movies.scss
+++ b/src/containers/Movies/Movies.scss
@@ -51,20 +51,23 @@
      }
 
     @media only screen and (max-width: 1024px) {
-        grid-template-columns: repeat(auto-fill, 170px); 
+        grid-template-columns: repeat(auto-fill, 180px); 
         grid-row-gap:10px;
         justify-content: center;
         width: 100%;
         margin: 0;
      }
      @media only screen and (max-width: 768px) {
-         grid-template-columns: repeat(auto-fill, 170px);
-         grid-row-gap:10px;
-         justify-content: center;
-         width: 100%;
-         margin: 0;
-         background-attachment: fixed;
-         background-repeat: no-repeat;
+         .movies{
+          grid-template-columns: repeat(auto-fill, 160px);
+          grid-row-gap:10px;
+          justify-content: center;
+          width: 100%;
+          margin: 0;
+          background-attachment: fixed;
+          background-repeat: no-repeat;
+         }
+        
      }
      @media only screen and (max-width: 450px) {
         .movies{
