--- a/src/App.css
+++ b/src/App.css
@@ -17,12 +17,12 @@ html{
 
 @media only screen and (max-width: 1023px) {
     html{
-        
+        background-attachment: fixed; 
     }
 }
 @media only screen and (max-width: 768px) {
     html{
-        
+        background-attachment: fixed;
     }
 }
 @media only screen and (max-width: 450px) {
