--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -6,6 +6,7 @@ footer {
    /*  width: 100vw; */
     bottom: 0;
     position:fixed;
+    z-index: 2;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
