--- a/src/components/Movie/Movie.scss
+++ b/src/components/Movie/Movie.scss
@@ -34,7 +34,7 @@
             display: flex;
             align-items: center;
             color:rgb(240, 240, 240);
-            max-width: 100%;
+            /* max-width: 100%; */
             height: 4.3vh;
             font-size: 1.1em;
             font-weight: bold;
@@ -105,23 +105,27 @@
 
         img{
             height: 270px;
-       }
+       } 
     }
     @media only screen and (max-width: 768px) {
         .movieTitle{
             font-size: 0.8em; 
             height: 5.3vh;
         }
+
+        img{
+            height: 270px;
+       }
     }
     @media only screen and (max-width: 450px) {
         .movieTitle{
             font-size: 0.9em; 
-            height: 11vh;
+            height: 5vh;
         }
 
-         img{
+          img{
              height: 270px;
-        }
+        } 
  
     }    
 
