--- a/src/containers/Movies/Movies.scss
+++ b/src/containers/Movies/Movies.scss
@@ -7,6 +7,7 @@
 .contenedor{
     /* background: red; */
     display: flex;
+    flex-direction: column;
     justify-content: center;
     width: 100vw;
     position: absolute;
@@ -59,7 +60,7 @@
      }
      @media only screen and (max-width: 768px) {
          .movies{
-          grid-template-columns: repeat(auto-fill, 160px);
+          grid-template-columns: repeat(auto-fill, 150px);
           grid-row-gap:10px;
           justify-content: center;
           width: 100%;
