--- a/src/containers/Movies/Movies.scss
+++ b/src/containers/Movies/Movies.scss
@@ -33,7 +33,7 @@
     display: grid;
     grid-template-columns: repeat(10,1fr);
     grid-gap: 1rem;
-    grid-row-gap: 110px;
+    grid-row-gap: 80px;
     padding: 1em;
     width: 95%;
     height: 90%;
@@ -43,7 +43,7 @@
     /* z-index: 3; */  
 
     @media only screen and (max-width: 1440px) {
-        grid-template-columns: repeat(5, 170px); 
+        grid-template-columns: repeat(5, 220px); 
         grid-row-gap:8px;
         grid-gap: 3.5rem;
         justify-content: center;
@@ -51,20 +51,20 @@
         margin: 2em auto;
      }
 
-    @media only screen and (max-width: 1024px) {
+    @media only screen and (max-width: 1024px) and (orientation: portrait) {
         grid-template-columns: repeat(auto-fill, 180px); 
-        grid-row-gap:10px;
         justify-content: center;
         width: 100%;
-        margin: 0;
+        margin: 2em auto 7em;
      }
      @media only screen and (max-width: 768px) {
          .movies{
-          grid-template-columns: repeat(auto-fill, 150px);
-          grid-row-gap:10px;
+          grid-template-columns: repeat(auto-fill, 160px);
+          grid-row-gap:200px;
           justify-content: center;
           width: 100%;
-          margin: 0;
+          margin: 30px;
+          padding: 2em;
           background-attachment: fixed;
           background-repeat: no-repeat;
          }
@@ -73,9 +73,9 @@
      @media only screen and (max-width: 450px) {
         .movies{
          grid-template-columns: repeat(auto-fill, 150px); 
-         grid-row-gap: 10px;
-         margin: 0;
+         grid-row-gap: 200px;
          width: 100%;
+         padding: 2em;
          background-attachment: fixed;
          background-repeat: no-repeat;
          }
