--- a/src/components/Movie/Movie.scss
+++ b/src/components/Movie/Movie.scss
@@ -100,7 +100,8 @@
      @media only screen and (max-width: 1024px) {
         .movieTitle{
             font-size: 0.8em; 
-            height: 5vh;
+            height: 5.5vh;
+            overflow: hidden;
         }
 
         img{
